# Sudoku-Solver

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: Main.cpp
content/sudokus/: not_solveable.txt
engine/: CMakeLists.txt
engine/include/: Board.h  SolveResult.h  Tile.h  TileStatus.h  TileValue.h
engine/src/: Board.cpp  SolveResult.cpp
